src/test/ui/no-send-res-ports.stderr
error[E0277]: `std::rc::Rc<()>` cannot be sent between threads safely
  --> $DIR/no-send-res-ports.rs:35:5
   |
LL |     thread::spawn(move|| {
   |     ^^^^^^^^^^^^^ `std::rc::Rc<()>` cannot be sent between threads safely
   |
   = help: within `[closure@$DIR/no-send-res-ports.rs:35:19: 39:6 x:main::foo]`, the trait `std::marker::Send` is not implemented for `std::rc::Rc<()>`
   = note: required because it appears within the type `Port<()>`
   = note: required because it appears within the type `main::foo`
   = note: required because it appears within the type `[closure@$DIR/no-send-res-ports.rs:35:19: 39:6 x:main::foo]`
   = note: required by `std::thread::spawn`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
